# next

./: CLAUDE.md  Cargo.toml  DECISIONS.md  HANDOVER-indeterminate-canonical-number-dag-2026-07-24.md  HANDOVER-open-threads-2026-07-23.md  LICENSE  MANIFEST.sha256.txt  OwedItems-CLOSED.md  OwedItems.md  PROGRESS.md  README.md  next-application-induction-specification-v0-8.md  next-design-compendium-v1-0.md  next-grammar-specification-v0-1.md  next-kernel-ast-specification-v0-1.md  next-mu-canonicalization-specification-v0-1.md  next-mu-canonicalization-specification-v0-5.md  next-phase-a-worked-examples-recovered.md  next-recursive-contracts-specification-v0-2.md  next-semantics-companion-v0-1-update-review.md  next-semantics-companion-v0-1.md  next-test-suite-specification-v0-1.md  next-tuple-length-family-specification-v0-3.md  rust-toolchain.toml
examples/: counter.next  factorial.next  failure.next  match.next
src/: ast.rs  env.rs  interner.rs  lib.rs  main.rs  rational.rs  value.rs
src/analyzer/: mod.rs  tests.rs
src/contract/: expr.rs  length.rs  mod.rs  operation.rs  recursive.rs  subcontract.rs  tests.rs
src/desugar/: hask.rs  mod.rs  tests.rs
src/lex/: lexer.rs  mod.rs  tests.rs  token.rs
src/normalize/: mod.rs  tests.rs
src/oracle/: canon.rs  equal.rs  eval.rs  harness.rs  mod.rs  mtch.rs  mu.rs  poly.rs  tests.rs
src/oracle/mu/: tests.rs
src/parse/: mod.rs  parser.rs  surface.rs  tests.rs
tests/: conformance.rs
